--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
 				<div class="r-sidebar-item">
 					<!-- Sidebar Image -->
 					<div class="img">
-						<img src="{% static 'img/daniel-davies.jpg' %}" alt="An image of Daniel Davies" class="img-responsive" />
+						<a href="#"><img src="{% static 'img/daniel-davies.jpg' %}" alt="An image of Daniel Davies" class="img-responsive" /></a>
 					</div>
 					<!-- Name -->
 					<div class="name">
