--- a/app/static/css/404.css
+++ b/app/static/css/404.css
@@ -89,7 +89,7 @@ hr {
   color: #f75353 !important;
 }
 .green {
-  color: #51d466 !important;
+  color: #006400 !important;
 }
 .lblue {
   color: #32c8de !important;
@@ -126,7 +126,7 @@ hr {
   background-color: #f75353 !important;
 }
 .bg-green {
-  background-color: #66a266 !important;
+  background-color: #006400 !important;
 }
 .bg-lblue {
   background-color: #32c8de !important;
@@ -163,7 +163,7 @@ hr {
   border: 1px solid #f75353;
 }
 .br-green {
-  border: 1px solid #66a266;
+  border: 1px solid #006400;
 }
 .br-lblue {
   border: 1px solid #32c8de;
@@ -245,14 +245,14 @@ hr {
 }
 .btn.btn-green {
 	color: #ffffff;
-	background: #51d466;
-	border: 1px solid #66a266;
+	background: #006400;
+	border: 1px solid #006400;
 }
 .btn.btn-green:hover,
 .btn.btn-green:focus,
 .btn.btn-green.active,
 .btn.btn-green:active {
-	background: #66a266;
+	background: #006400;
 	color: #ffffff;
 }
 .btn.btn-lblue {
@@ -382,7 +382,7 @@ hr {
 }
 .label.label-green {
 	color: #ffffff;
-	background: #51d466;
+	background: #006400;
 }
 .label.label-lblue {
 	color: #ffffff;
@@ -441,7 +441,7 @@ hr {
 }
 .badge.badge-green {
 	color: #ffffff;
-	background: #51d466;
+	background: #006400;
 }
 .badge.badge-lblue {
 	color: #ffffff;
@@ -510,231 +510,42 @@ hr {
 .youtube {background: #ed5441;}
 .youtube:hover {	background: #b72411;}
 
-/* Resume */
-.resume .r-sidebar{
-	width:360px;
-	float:left;
-	padding:40px 50px;
-	position:fixed;
-	box-shadow:0px 0px 10px rgba(0,0,0,0.3);
-	height:100%;
+/* UI X */
+.ui-295 {
+	max-width:600px;
+	margin:0 auto;
+	margin-top:100px;
 	background:#fff;
-}
-.resume .r-sidebar .r-sidebar-item{
-	max-width:280px;
-	margin:0px auto;
-	padding-bottom:20px;
-	border-bottom:1px solid #eee;
-}
-.resume .r-sidebar .img{
-	float:left;
 	text-align:center;
-	width:100px;
+	box-shadow:0px 0px 10px rgba(0,0,0,0.2);
+	border-radius:5px;
+	padding:50px;
 }
-.resume .r-sidebar .img a img{
-	width:80px;
-	height:80px;
-	border-radius:100px;
+.ui-295  h2{
+	font-size:50px;
+	line-height:65px;
 }
-.resume .r-sidebar .name{
-	margin-left:110px;
-}
-.resume .r-sidebar .name h3{
-	font-size:22px;
-	line-height:37px;
-	font-weight:400;
-	position:relative;
-	top:6px;
-}
-.resume .r-sidebar .name small{
-	font-size:13px;
-	line-height:28px;
-	color:#999;
-}
-@media (max-width: 767px){
-	.resume .r-sidebar{
-		float:none;
-		position:relative;
-		width:100% !important;
-		margin:0px auto;
-		box-shadow:none;
-	}	
-	.resume .r-sidebar .r-sidebar-item{
-		max-width:220px;
-		margin:0px auto;
-	}	
-	.resume .r-sidebar .img{
-		float:left;
-		text-align:center;
-		width:80px;
+@media (max-width:600px){
+	.ui-295{
+		margin:50px 20px;
 	}
-	.resume .r-sidebar .img a img{
-		width:60px;
-		height:60px;
-		border-radius:100px;
-	}
-	.resume .r-sidebar .name{
-		margin-left:90px;
-	}
-	.resume .r-sidebar .name h3{
-		font-size:14px;
-		line-height:22px;
-		font-weight:600;
+	.ui-295 h2{
+		font-size:35px;
+		line-height:50px;
 	}
 }
-.resume .r-sidebar table{
-	max-width:280px;
+.ui-295  h3{
+	color:#888;
+}
+.ui-295  p{
+	max-width:400px;
+	margin:0 auto;
+	margin-top:10px;
+}
+.ui-295  form{
+	max-width:250px;
 	margin:20px auto;
 }
-.resume .r-sidebar table tr th{
-	font-weight:400;
-	color:#222;
-	text-align:right;
-	font-size:13px;
-	padding:7px 0px;
-}
-.resume .r-sidebar table tr td{
-	padding-left:25px;
-	font-size:13px;
-	color:#999;
-}
-.resume .r-sidebar .social{
-	text-align:center;
-}
-.resume .r-sidebar .social a{
-	display:inline-block;
-	width:35px;
-	height:35px;
-	line-height:35px;
-	color:#fff;
-	border-radius:100%;
-	margin:0px 2px;
-}
-/* Main Block */
-.resume .main-block{
-	margin-left:360px;
-	padding:45px;
-}
-.resume .main-block hr{
-	border-top:1px solid rgba(0,0,0,0.15);
-	border-bottom:1px solid rgba(255,255,255,0.07);
-	margin:30px 0px;
-}
-@media (max-width: 767px){
-	.resume .main-block{
-		text-align:center;
-		margin-left:0px;
-		position:relative;
-	}
-}		
-.resume .main-block  h3{
-	font-size:25px;
-	line-height:40px;
-	color:#fff;
-	font-weight:300;
-	border-bottom:1px solid rgba(0,0,0,0.1);
-	padding-bottom:10px;
-	margin-bottom:10px;
-}
-@media (max-width:767px){
-	.resume .main-block  h3{
-		font-size:20px;
-		line-height:35px;
-	}
-}
-.resume .main-block  h4 {
-	color:#fff;
-	font-weight:100;
-
-}
-.resume .main-block .project p {
-	color: rgba(255, 255, 255, 0.9);
-	margin: 15px 0;
-}
-.resume .main-block a,
-.resume .main-block a:hover{
-	color:#fff;
-}
-.resume .main-block .objective-content p{
-	color:#fff;
-	line-height:37px;
-	font-size:22px;
-	font-weight:300;
-}
-@media (max-width: 767px){
-	.resume .main-block .objective-content p{
-		line-height:31px;
-		font-size:16px;
-	}
-}
-.resume .main-block .skill span.big-circle{
-	width:90px;
-	height:90px;
-	border-radius:100px;
-	text-align:center;
-	line-height:90px;
-	background:rgba(0,0,0,0.05);
-	display:inline-block;
-	position:relative;
-	margin:10px 15px 0px 0px;
-	border:2px solid #fff;
-	color:#fff;
-	font-size:15px;
-	font-weight:600;
-	box-shadow:inset 0px 0px 10px rgba(0,0,0,0.1);
-}
-.resume .main-block  .skill span.small-circle{
-	width:37px;
-	height:37px;
-	line-height:37px;
-	border-radius:60px;
-	text-align:center;
-	display:inline-block;
-	color:#777;
-	font-size:13px;
-	position:absolute;
-	top:-7px;
-	right:-7px;
-}
-/* Education */
-.resume .main-block .education .education-item{
-	margin:10px auto;
-}
-.resume .main-block .education .education-item h6{
-	font-size:13px;
-	color:rgba(255,255,255,0.9);
-	font-weight:400;
-}
-.resume .main-block .education .education-item h4{
-	color:#fff;
-}
-.resume .main-block .education .education-item p{
-	color:rgba(255,255,255,0.9);
-}
-@media (max-width: 767px){
-	.resume .main-block .education .education-item{
-		max-width:260px;
-		margin-bottom:20px;
-	}
-}
-/* Experience */
-.resume .main-block .experience .experience-item{
-	margin:10px auto;	
-}
-.resume .main-block .experience h6{
-	font-size:13px;
-	color:rgba(255,255,255,0.9);
-	font-weight:400;
-}
-.resume .main-block .experience h4{
-	color:#fff;
-}
-.resume .main-block .experience p{
-	color:rgba(255,255,255,0.9);
-}
-@media (max-width: 767px){
-	.resume .main-block .experience .experience-item{
-		max-width:260px;
-		margin-bottom:20px;
-	}
+.ui-295  form input{
+	color:#888;
 }
