--- a/app/static/css/404.css
+++ b/app/static/css/404.css
@@ -89,7 +89,7 @@ hr {
   color: #f75353 !important;
 }
 .green {
-  color: #006400 !important;
+  color: #66a266 !important;
 }
 .lblue {
   color: #32c8de !important;
@@ -126,7 +126,7 @@ hr {
   background-color: #f75353 !important;
 }
 .bg-green {
-  background-color: #006400 !important;
+  background-color: #66a266 !important;
 }
 .bg-lblue {
   background-color: #32c8de !important;
@@ -163,7 +163,7 @@ hr {
   border: 1px solid #f75353;
 }
 .br-green {
-  border: 1px solid #006400;
+  border: 1px solid #66a266;
 }
 .br-lblue {
   border: 1px solid #32c8de;
@@ -245,14 +245,14 @@ hr {
 }
 .btn.btn-green {
 	color: #ffffff;
-	background: #006400;
-	border: 1px solid #006400;
+	background: #66a266;
+	border: 1px solid #66a266;
 }
 .btn.btn-green:hover,
 .btn.btn-green:focus,
 .btn.btn-green.active,
 .btn.btn-green:active {
-	background: #006400;
+	background: #66a266;
 	color: #ffffff;
 }
 .btn.btn-lblue {
@@ -382,7 +382,7 @@ hr {
 }
 .label.label-green {
 	color: #ffffff;
-	background: #006400;
+	background: #66a266;
 }
 .label.label-lblue {
 	color: #ffffff;
@@ -441,7 +441,7 @@ hr {
 }
 .badge.badge-green {
 	color: #ffffff;
-	background: #006400;
+	background: #66a266;
 }
 .badge.badge-lblue {
 	color: #ffffff;
