--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -16,7 +16,7 @@
                 This is a one page website, so you've got yourself very lost.<br />
             </p>
             <p>
-                <a class="btn btn-grey" href="/">Go to that one page</a>
+                <a class="btn btn-grey black" href="/">Go to that one page</a>
             </p>
         </div>
 		
