--- a/cv/templates/cv/includes/job-entry.html
+++ b/cv/templates/cv/includes/job-entry.html
@@ -7,7 +7,7 @@
             <h4>{{ job.title }}</h4>
         </div>
         <p>
-            Leading Django team developing web interfaces and APIs for petrol pumps to authorise filling and record transactions.
+            {{ job.description }}
         </p>
     </div>
 </div>
